# multiple-webcam-multi-thread

./: .gitignore  README.md
Read_Webcam_thread/: CMakeLists.txt  Read_Webcam_thread - Copy.cpp  camloader.cpp  camloader.h  config_reader.cpp  config_reader.h  display_frame.cpp  display_frame.h  ini_reader.cpp  ini_reader.h  main.cpp  test.ini
